# alvis

./: .gitignore  README.md  install.sh  pyproject.toml
app/: __init__.py  auth_store.py  bootstrap.py  cli.py  cli_formatters.py  config.py  daemon.py  daemon_client.py  enums.py  install_paths.py  launchd.py  logging.py  rich_repl.py  schemas.py  services.py  upgrade.py
app/agents/: codex_adapter.py
app/api/: server.py
app/core/: events.py
app/db/: base.py  init_db.py  models.py  repository.py
app/graph/: state.py  supervisor.py
app/reviews/: __init__.py  gate.py
app/runtime/: codex_sdk_runtime.py  codex_session_wrapper.py  leader_console.py  noninteractive_task_runner.py  output_collector.py  sdk_worker.py  ui_state.py  worker_dashboard.py  worker_monitor.py
app/sessions/: __init__.py  tmux_manager.py
app/workspace/: worktree_manager.py
document/: alvis-langgraph-tmux-orchestrator-design.md  alvis-multi-agent-orchestrator-blog-draft.md  monitor-vs-tv-analysis.md
document/plan/: alvis-implementation-plan.md
reference_doc/: cokacdir-multi-agent-communication.md  ensemble-multi-agent-conversation-flow.md
scripts/: bootstrap.sh  codex_session_wrapper.py
tests/: test_cli_daemon_errors.py  test_cli_e2e.py  test_cli_formatters.py  test_codex_sdk_runtime.py  test_daemon_api.py  test_leader_console.py  test_output_collector.py  test_review_gate.py  test_rich_repl.py  test_runtime_dashboards.py  test_sdk_worker.py  test_supervisor.py  test_task_prompt.py  test_tmux_integration.py  test_upgrade.py  test_worktree_runtime.py
(+1 files in other folders)
