[project]
name = "alvis"
version = "0.2.7"
description = "LangGraph-centered local orchestrator for Codex SDK-backed coding teams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "langgraph>=0.2.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "rich>=13.7.1,<14.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "structlog>=24.4.0,<25.0.0",
  "typer>=0.12.3,<1.0.0",
  "uvicorn>=0.30.6,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
]

[project.scripts]
alvis = "app.cli:app"
alvis-daemon = "app.daemon:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
